# rust-crc16

./: .travis.yml  Cargo.toml  README.md  build.rs  index.html  search-index.js
crc16/: enum.ARC.html  enum.AUG_CCITT.html  enum.BUYPASS.html  enum.CCITT_FALSE.html  enum.CDMA2000.html  enum.CRC_A.html  enum.DDS_110.html  enum.DECT_R.html  enum.DECT_X.html  enum.DNP.html  enum.EN_13757.html  enum.GENIBUS.html  enum.KERMIT.html  enum.MAXIM.html  enum.MCRF4XX.html  enum.MODBUS.html  enum.RIELLO.html  enum.T10_DIF.html  enum.TELEDISK.html  enum.TMS37157.html  enum.USB.html  enum.XMODEM.html  enum.X_25.html  index.html  struct.State.html  trait.CrcType.html
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/default/: trait.Default.js
implementors/core/hash/: trait.Hasher.js
implementors/core/marker/: trait.Copy.js
implementors/crc16/: trait.CrcType.js
src/: lib.rs
src/crc16/: lib.rs.html
