[package]

name = "crc16"
version = "0.4.0"
authors = ["AIkorsky <aikorsky@gmail.com>"]
license = "MIT"
description = "A CRC16 implementation"
repository = "https://github.com/blackbeam/rust-crc16"
documentation = "https://blackbeam.github.io/rust-crc16"
readme = "README.md"
keywords = ["crc", "crc16", "hash", "checksum", "no_std"]
exclude = [".*"]
build = "build.rs"

[lib]

name = "crc16"
path = "src/lib.rs"

[profile.bench]

opt-level = 3
debug = false

[profile.release]

opt-level = 3
debug = false
lto = true
